[package]
name = "negie"
description = "Generate complex scatter plots of eigenvalues from parametrized bohemian matrices"
repository = "https://github.com/FliiFe/negie"
license = "MIT"
readme = "README.md"
keywords = ["mathematics", "eigenvalues", "complex-analysis", "bohemian-matrix"]
categories = ["command-line-utility", "graphics", "mathematics", "science", "visualization"]
homepage = "https://github.com/FliiFe/negie"
version = "0.1.1"
edition = "2021"
exclude = [ "**.png", "examples/" ]

[[bin]]
name = "negie"
test = false
bench = false

[dependencies]
nalgebra = "0.30"
rand = "0.8"
image = "0.24"
imageproc = "0.23"
rand_distr = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
